--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
   </head>
   <body>
     <header>
+      <img src="/img/livro-ico.png" alt="logo">
       <a href="/"><span>Paixão por Leitura</span></a>
       <div class="login">
           <p><a href="/cadastro">Cadastre-se</a></p>|
