--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,10 +14,10 @@
   <body>
     <header>
       <img src="/img/livro-ico.png" alt="logo">
-      <a href="/"><span>Paixão por Leitura</span></a>
+      <a id="linkMain" href="/"><span>Paixão por Leitura</span></a>
       <div class="login">
-          <p><a href="/cadastro">Cadastre-se</a></p>|
-          <p><a href="/login">Login</a></p>
+          <p id="login_cad"><a href="/user/cadastro">Cadastre-se</a></p>
+          <p id="login_log"><a href="/user/login">Login</a></p>
       </div>
     </header>
 
@@ -28,5 +28,6 @@
     <footer>
       <span>Desenvolvido por André Luís Silva Medina</span>
     </footer>
+
   </body>
 </html>
