--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <section class="cadastro">
   <h2>Login</h2>
-  <form action="/login/load" method="POST">
+  <form action="/user/login/load" method="POST">
     <div class="cadastro_div">
       <label>E-mail:</label>
       <input type="email" name="email" placeholder="Digite seu e-mail" />
