--- a/views/cadastro.handlebars
+++ b/views/cadastro.handlebars
@@ -1,9 +1,9 @@
 <section class="cadastro">
   <h2>Cadastro</h2>
-  <form action="/cadastro/save" method="POST">
+  <form action="/user/cadastro/save" method="POST">
     <div class="cadastro_div">
       <label>Nome:</label>
-      <input type="text" name="name" placeholder="Digite seu nome" />
+      <input type="text" name="name" placeholder="Digite seu primeiro nome" />
     </div>
     <div class="cadastro_div">
       <label>E-mail:</label>
