--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,25 @@
   font-family: sans-serif;
   text-decoration: none;
 }
-
+body {
+  font-size: 18px;
+}
+input {
+  width: 400px;
+  font-size: 1em;
+}
+textarea {
+  resize: none;
+  font-size: 1em;
+  padding: 5px;
+}
+.input_div {
+  font-weight: bold;
+  white-space: nowrap;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
 header {
   position: relative;
   padding: 5px 10px 5px;
@@ -15,22 +33,22 @@ header {
 header img {
   position: absolute;
   left: 40px;
-  top: 15px;
-  width: 50px;
+  top: 0.7em;
+  width: 4.1em;
 }
 header span {
   color: rgb(226, 43, 98);
   font-family: "Permanent Marker", cursive;
-  font-size: 46px;
+  font-size: 2.9em;
 }
 .login {
   margin-right: 10px;
-  font-size: 22px;
+  font-size: 1.4em;
   display: flex;
   gap: 10px;
   padding: 15px;
   position: absolute;
-  top: 20px;
+  top: 0.9em;
   right: 0;
 }
 .login a {
@@ -49,34 +67,23 @@ main {
   max-width: 500px;
   margin: 0 auto;
   background-color: bisque;
-  font-size: 18px;
 }
 .cadastro h2 {
   text-align: center;
   margin-bottom: 20px;
 }
-.cadastro input {
-  width: 400px;
-  font-size: 16px;
-}
 .cadastro form {
   gap: 10px;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
 }
-.cadastro_div {
-  white-space: nowrap;
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-}
-#btn {
+.btn {
   margin: 15px auto;
   padding: 3px;
   width: 170px;
 }
-.verificaCad {
+.alerta {
+  padding: 0 80px;
   color: rgb(255, 255, 255);
   background: red;
   text-align: center;
@@ -100,18 +107,19 @@ main {
 .imagens img {
   width: 100%;
 }
-#painel {
-  display: flex;
-  /* background-color: yellow; */
-}
 /* --------------------------------- MENU */
 
+#painel {
+  display: flex;
+}
 #menu ul {
   list-style: none;
   display: flex;
   flex-direction: column;
 }
 #menu li {
+  cursor: pointer;
+  color: white;
   background-color: black;
   text-align: center;
   position: relative;
@@ -125,8 +133,6 @@ main {
   color: rgb(255, 255, 255);
 }
 #menu ul li ul {
-  /* z-index: -1; */
-  /* background-color: transparent; */
   overflow: hidden;
   position: absolute;
   top: 15%;
@@ -136,31 +142,50 @@ main {
   transition: 0.2s all ease-in-out;
 }
 #menu ul li ul li {
-  /* background-color: black; */
-  padding: 5px 25px;
+  padding: 5px 0px;
+  width: 120px;
 }
 #menu ul li:hover ul {
   visibility: visible;
   opacity: 1;
 }
 #menu ul li:hover {
-  /* background-color: rgb(49, 48, 48); */
-  background-color: rgb(88, 10, 109);
+  background-color: rgb(208, 9, 9);
 }
 
 /* --------------------------------- CONTEUDO */
 
 #conteudo {
   background-color: rgb(252, 252, 230);
+  display: flex;
+  justify-content: center;
   width: 80%;
   height: 500px;
   margin: 0 auto;
+  padding: 20px;
+}
+#conteudo h1 {
+  font-size: 1.5em;
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 15px;
+}
+#conteudo form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+#resTit {
+  width: 460px;
+  /* margin-bottom: 30px; */
 }
 
 /* --------------------------------- FOOTER */
 
 footer {
-  font-size: 20px;
+  font-size: 1.3em;
   display: flex;
   justify-content: center;
   align-items: center;
