--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,5 +29,6 @@
       <span>Desenvolvido por André Luís Silva Medina</span>
     </footer>
 
+  <script src="/scripts/main.js"></script>
   </body>
 </html>
