--- a/views/painel.handlebars
+++ b/views/painel.handlebars
@@ -53,18 +53,21 @@
         <form action="/painel/{{id}}/resenhas/editar/save" method="POST">
             <div id="resTit" class="input_div">  
                 <label>Livro:</label>
-                <select name="select" clas="selectResenha">
-                    <option value="teste">teste</option>
-                    <option value="teste1">teste1</option>
-                    <option value="teste2">teste2</option>
+                <select id="select"  name="livro" clas="selectResenha">
+                    <option></option>
+                    {{#each resenhas}}
+                    <option value="{{livro}}">{{livro}}</option>
+                    {{/each}}
                 </select>              
                 {{!-- <input type="text" name="livro" placeholder="Título do livro" maxlength="50">                 --}}
             </div>
             <p class="alerta">{{alert}}</p>
-            <textarea name="resenha" cols="80" rows="10" maxlength="2500"></textarea>
+            {{#each resenhas}}
+            <textarea class="textArea" name="resenha" cols="80" rows="10" maxlength="2500">{{resenha}}</textarea>
+            {{/each}}
             <div class="div_btn">
                 <input class="btn" type="button" value="Buscar">
-                <input class="btn" type="submit" value="Editar"></form>
+                <input id="submitRes" class="btn" type="submit" value="Editar"></form>
             </div>
         </div>
         {{/if}}
