--- a/views/partials/resPart.handlebars
+++ b/views/partials/resPart.handlebars
@@ -1,5 +1,5 @@
 <div class="resenhasPartial">
-    <h2>{{this.livro}}</h2><br>
+    <h2 class="optResVer">{{this.livro}}</h2><br>
     <p>{{this.resenha}}</p>
     <hr>
 </div>
