--- a/views/painel.handlebars
+++ b/views/painel.handlebars
@@ -65,7 +65,7 @@
             <textarea class="textArea" name="resenha" cols="80" rows="10" maxlength="2500">{{resenha}}</textarea>
             {{/each}}
             <div class="div_btn">
-                <input id="submitRes" class="btn" type="submit" value="Editar"></form>
+                <input id="submitRes" class="btn" type="submit" value="Salvar"></form>
             </div>
         </div>
         {{/if}}
