--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,7 +42,7 @@
               </ul>
             </li>
             <li>Desejos</li>
-            <li>Adiquiridos</li>
+            <li>Adquiridos</li>
           </ul>
         </nav>
       </section>
