mudança para MVC concluída

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
+    />
     <link rel="shortcut icon" href="/img/livro-ico.png" />
     <title>Paixão por Leitura</title>
   </head>
@@ -16,22 +20,25 @@
       <img src="/img/livro-ico.png" alt="logo" />
       <a id="linkMain" href="/"><span>Paixão por Leitura</span></a>
       <div class="login">
-        <p id="login_cad"><a href="/user/cadastro">Cadastre-se</a></p>
-        <p id="login_log"><a href="/user/login">Login</a></p>
+        {{#if session.userid}}
+          <p>Olá {{session.username}}</p>
+          <p><a href="/auth/logout">Sair</a></p>
+        {{else}}
+          <p><a href="/auth/register">Cadastre-se</a></p>
+          <p><a href="/auth/login">Login</a></p>
+        {{/if}}
       </div>
     </header>
-    {{#if auth}}
-    <span class="auth">{{name}}</span>
-    <span class="auth">{{id}}</span>
+    {{#if session.userid}}
       <section class="resenhas">
         <nav id="menu">
           <ul class="menu_ul1">
             <li>Resenhas
               <ul class="menu_ul2">
-                <a href="/resenhas/{{id}}/resenhas/ver"><li>Ver</li></a>
-                <a href="/resenhas/{{id}}/resenhas/criar"><li>Criar</li></a>
-                <a href="/resenhas/{{id}}/resenhas/editar"><li>Editar</li></a>
-                <a href="/resenhas/{{id}}/resenhas/delete"><li>Apagar</li></a>
+                <a href="/resenhas/list"><li>Ver</li></a>
+                <a href="/resenhas/create"><li>Criar</li></a>
+                <a href="/resenhas/edit"><li>Editar</li></a>
+                <a href="/resenhas/delete"><li>Apagar</li></a>
               </ul>
             </li>
             <li>Leituras
