--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -57,9 +57,6 @@ header span {
   border-bottom: 2px solid;
   color: black;
 }
-.auth {
-  display: none;
-}
 
 /* --------------------------------- MAIN */
 
@@ -213,17 +210,18 @@ main {
   width: 60em;
 }
 .topo {
-  border: 2px solid black;
-  border-radius: 50%;
-  padding: 15px;
-  font-weight: bold;
-  color: white;
   position: fixed;
-  right: 0;
+  right: 20px;
   bottom: 15%;
-  background-color: rgb(71, 71, 187);
 }
-
+.topo i {
+  color: #000;
+  font-size: 35px;
+  transition: 0.5s;
+}
+.topo i:hover {
+  color: rgb(85, 46, 205);
+}
 /* --------------------------------- FOOTER */
 
 footer {
