--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -11,5 +11,6 @@
       src="/img/a-casa-da-alegria.jpg"
       alt="Capa do livro, É assim que acaba"
     /></figure>
-  <figure><img src="/img/o-fisico.jpg" alt="Capa do livro, O fisico" /></figure>
+  <figure><img src="/img/o-fisico.jpg" alt="Capa do livro, O fisico" />
+  </figure>
 </section>
