--- a/views/auth/register.handlebars
+++ b/views/auth/register.handlebars
@@ -1,47 +1,60 @@
-<section class="cadastro">
-  <h2>Cadastro</h2>
+<div class="container bg-info p-4 auth mt-4 rounded border border-dark">
+  <p class="h2 text-center fw-bold">Tela de Cadastro</p>
   <form action="/auth/register" method="POST">
-    <div class="input_div">
-      <label>Nome:</label>
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="m-0 form-label">Nome</label>
       <input
+        name="name"
         type="text"
+        class="form-control border border-dark"
+        id="validationDefault01"
+        aria-describedby="emailHelp"
         name="name"
         placeholder="Digite seu nome"
         maxlength="50"
         required
       />
     </div>
-    <div class="input_div">
-      <label>E-mail:</label>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="m-0 form-label">E-mail</label>
       <input
         type="email"
+        class="form-control border border-dark"
+        id="exampleInputEmail1"
         name="email"
         placeholder="Digite seu e-mail"
         maxlength="40"
         required
       />
     </div>
-    <div class="input_div">
-      <label>Senha:</label>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="fm-0 orm-label">Senha</label>
       <input
         type="password"
+        class="form-control border border-dark"
+        id="exampleInputPassword1"
         name="senha"
         placeholder="Digite sua senha"
         maxlength="15"
         required
       />
     </div>
-    <div class="input_div">
-      <label>Confirmar senha: </label>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="m-0 form-label">Confirmar senha</label>
       <input
         type="password"
+        class="form-control border border-dark"
+        id="exampleInputPassword2"
         name="senha2"
         placeholder="Digite sua senha novamente"
         maxlength="15"
         required
       />
     </div>
-    <input class="btn" type="submit" value="Cadastrar" />
-    <p class="alerta">{{alert}}</p>
+    <button
+      type="submit"
+      class="mybtn btn btn-primary border border-dark mb-3"
+    >Registrar</button>
   </form>
-</section>
+  <p class="alerta rounded">{{alert}}</p>
+</div>
