--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,11 +3,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
@@ -17,42 +18,62 @@
   </head>
   <body>
     <header>
-      <img src="/img/livro-ico.png" alt="logo" />
-      <a id="linkMain" href="/"><span>Paixão por Leitura</span></a>
-      <div class="login">
+      <div class="myheader container-fluid row d-flex align-items-center m-0">
+        <div class="col"><img src="/img/livro-ico.png" alt="logo" /></div>
+        <a class="col title text-decoration-none" href="/">Paixão por Leitura</a>
+
         {{#if session.userid}}
-          <p>Olá {{session.username}}</p>
-          <p><a href="/auth/logout">Sair</a></p>
+          <div class="login col text-end">
+            <span class="text-light text-nowrap">Olá
+              {{session.username}}
+              |</span>
+            <a href="/auth/logout" class="text-light">Sair</a>
+          </div>
         {{else}}
-          <p><a href="/auth/register">Cadastre-se</a></p>
-          <p><a href="/auth/login">Login</a></p>
+          <div class="login col text-end">
+            <a
+              href="/auth/register"
+              class="text-light text-nowrap"
+            >Cadastre-se</a>
+            <a href="/auth/login" class="text-light ps-3 border-start">Login</a>
+          </div>
         {{/if}}
+
       </div>
     </header>
     {{#if session.userid}}
-      <section class="resenhas">
-        <nav id="menu">
-          <ul class="menu_ul1">
-            <li>Resenhas
-              <ul class="menu_ul2">
-                <a href="/resenhas/list"><li>Ver</li></a>
-                <a href="/resenhas/create"><li>Criar</li></a>
-                <a href="/resenhas/edit"><li>Editar</li></a>
-                <a href="/resenhas/delete"><li>Apagar</li></a>
-              </ul>
-            </li>
-            <li>Leituras
-              <ul class="menu_ul2">
-                <li>Atuais</li>
-                <li>Concluídas</li>
-                <li>Próximas</li>
-              </ul>
-            </li>
-            <li>Desejos</li>
-            <li>Adquiridos</li>
-          </ul>
-        </nav>
-      </section>
+      <div class="dropdown position-absolute mt-2">
+        <button
+          class="btn btn-dark dropdown-toggle"
+          data-bs-toggle="dropdown"
+        >Menu</button>
+        <div class="mydropdown dropdown-menu">
+          <span class="dropdown-header fw-bold text-dark">Resenhas</span>
+          <div class="small">
+            <a href="/resenhas/list" class="dropdown-item">Lista</a>
+            <a href="/resenhas/create" class="dropdown-item">Criar</a>
+            <a href="/resenhas/edit" class="dropdown-item">Editar</a>
+            <a href="/resenhas/delete" class="dropdown-item">Deletar</a>
+          </div>
+          <hr class="dropdown-divider" />
+          <span class="dropdown-header fw-bold text-dark">Leituras</span>
+          <div class="small">
+            <a href="/leituras/atuais" class="dropdown-item">Atuais</a>
+            <a href="/leituras/terminadas" class="dropdown-item">Concluídas</a>
+            <a href="#" class="dropdown-item">Próximas</a>
+            <hr class="dropdown-divider" />
+            <a href="#" class="dropdown-item fw-bold text-dark">Lista de desejos</a>
+          </div>
+          <hr class="dropdown-divider" />
+          <a href="#" class="dropdown-item fw-bold text-dark">Adquiridos</a>
+        </div>
+      </div>
+    {{/if}}
+    {{#if messages.message}}
+      <div class="fmessage">
+        <p id="close">X</p>
+        {{messages.message}}
+      </div>
     {{/if}}
     <main>
       {{{body}}}
@@ -61,7 +82,9 @@
     <footer>
       <span>Desenvolvido por André Luís Silva Medina</span>
     </footer>
-
+    <script src="/scripts/jquery-3.3.1.slim.min.js"></script>
+    <script src="/scripts/popper.min.js"></script>
+    <script src="/scripts/bootstrap.bundle.min.js"></script>
     <script src="/scripts/main.js"></script>
   </body>
 </html>
