--- a/views/resenhas/edit.handlebars
+++ b/views/resenhas/edit.handlebars
@@ -1,8 +1,8 @@
 <section id="conteudo">
-  <div class="resenha_criar">
+  <div>
     <h1>Editar Resenha</h1>
-    <form action="/resenhas/edit" method="POST">
-      <div id="resTit" class="input_div">
+    <form class="form-control" action="/resenhas/edit" method="POST">
+      <div id="resTit" class="input_div p-3">
         <label>Livro:</label>
         <select id="select" name="livro" clas="selectResenha">
           <option></option>
@@ -16,13 +16,18 @@
         <textarea
           class="textArea"
           name="resenha"
-          cols="80"
+          cols="40"
           rows="10"
           maxlength="2500"
         >{{resenha}}</textarea>
       {{/each}}
       <div class="div_btn">
-        <input id="submitRes" class="btn" type="submit" value="Salvar" />
+        <input
+          id="submitRes"
+          class="mybtn btn btn-primary mb-2"
+          type="submit"
+          value="Salvar"
+        />
       </div>
     </form>
   </div>
