--- a/views/leituras/atuais.handlebars
+++ b/views/leituras/atuais.handlebars
@@ -1,5 +1,5 @@
 <div class="mystyle container border border-dark">
-  <form action="/leituras/atuais/criar" method="post">
+  <form action="/leituras/atuais" method="post">
     <div class="row">
       <span class="h2 text-center">Leituras Atuais</span>
       <div class="p-2 col">
@@ -20,6 +20,9 @@
     <div class="col-2">
       <h4>Início</h4>
     </div>
+    <div class="ms-4 col-2 text-end">
+      <h4>Excluir</h4>
+    </div>
     <div class="col text-end">
       <h4>Concluir</h4>
     </div>
@@ -33,8 +36,11 @@
       <div class="col-2">
         <p>{{date}}</p>
       </div>
+      <div class="col-2 text-end">
+        <a href='/leituras/atuais/excluir/{{livro}}'><i class="text-danger bi bi-trash3-fill"></a></i>
+      </div>
       <div class="col text-end">
-        <button class="me-4"><a href='/leituras/atuais/{{livro}}/{{date}}'><i class="bi bi-check2"></a></i></button>
+        <a href='/leituras/atuais/concluir/{{livro}}/{{date}}'><i class="my-check me-4 bi bi-check2 ts-5"></a></i>
       </div>
     </div>
   {{/each}}
