--- a/views/leituras/terminadas.handlebars
+++ b/views/leituras/terminadas.handlebars
@@ -1,4 +1,4 @@
-<div class="mystyle container border border-dark">
+<div id="termx" class="mystyle container border border-dark">
   <h2 class="text-center mb-5">Leituras Concluídas</h2>
   <div class="row mt-3">
     <div class="col-4">
@@ -27,11 +27,29 @@
         <p>{{dateFim}}</p>
       </div>
       <div class="col">
-        <p class="livros" id="{{livro}}">
-          <i class="star bi bi-star" id="st1"></i>
-          <i class="star bi bi-star" id="st2"></i>
-          <i class="star bi bi-star" id="st3"></i>
-        </p>
+        <input type="hidden" data-tit="{{tit}}" id="ntbd" value="{{nota}}" />
+        <div class="contStar">
+          <a href="/leituras/nota/{{livro}}/1"><i
+              class="{{tit}} star bi bi-star"
+              data-nota="1"
+            ></i></a>
+          <a href="/leituras/nota/{{livro}}/2"><i
+              class="{{tit}} star bi bi-star"
+              data-nota="2"
+            ></i></a>
+          <a href="/leituras/nota/{{livro}}/3"><i
+              class="{{tit}} star bi bi-star"
+              data-nota="3"
+            ></i></a>
+          <a href="/leituras/nota/{{livro}}/4"><i
+              class="{{tit}} star bi bi-star"
+              data-nota="4"
+            ></i></a>
+          <a href="/leituras/nota/{{livro}}/5"><i
+              class="{{tit}} star bi bi-star"
+              data-nota="5"
+            ></i></a>
+        </div>
       </div>
     </div>
   {{/each}}
