--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -61,10 +61,16 @@
             <a href="/leituras/atuais" class="dropdown-item">Atuais</a>
             <a href="/leituras/terminadas" class="dropdown-item">Concluídas</a>
             <hr class="dropdown-divider" />
-            <a href="#" class="dropdown-item fw-bold text-dark">Lista de desejos</a>
+            <a
+              href="/livros/wishlist"
+              class="dropdown-item fw-bold text-dark"
+            >Lista de desejos</a>
           </div>
           <hr class="dropdown-divider" />
-          <a href="#" class="dropdown-item fw-bold text-dark">Adquiridos</a>
+          <a
+            href="/livros/adquiridos"
+            class="dropdown-item fw-bold text-dark"
+          >Adquiridos</a>
         </div>
       </div>
     {{/if}}
