--- a/views/leituras/atuais.handlebars
+++ b/views/leituras/atuais.handlebars
@@ -4,7 +4,7 @@
       <span class="h2 text-center">Leituras Atuais</span>
       <div class="p-2 col">
         <label>Título: </label>
-        <input class="form-control" type="text" name="livro" required />
+        <input class="form-control" type="text" name="livro" placeholder="Ex: título - autor - editora - ano" required />
       </div>
       <div class="p-2 col">
         <label>Início: </label>
