--- a/views/leituras/terminadas.handlebars
+++ b/views/leituras/terminadas.handlebars
@@ -1,7 +1,7 @@
 <div id="termx" class="mystyle container border border-dark">
   <h2 class="text-center mb-5">Leituras Concluídas</h2>
   <div class="row mt-3">
-    <div class="col-4">
+    <div class="col">
       <h4>Livro</h4>
     </div>
     <div class="col">
@@ -17,7 +17,7 @@
   <hr class="my-2" />
   {{#each leiturasTerminadas}}
     <div class="row">
-      <div class="col-4">
+      <div class="col">
         <p>{{livro}}</p>
       </div>
       <div class="col">
