--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,9 +42,9 @@
       </div>
     </header>
     {{#if session.userid}}
-      <div class="dropdown position-absolute mt-2">
+      <div class="poscel dropdown position-absolute mt-2">
         <button
-          class="btn btn-dark dropdown-toggle"
+          class="btncel btn btn-dark dropdown-toggle"
           data-bs-toggle="dropdown"
         >Menu</button>
         <div class="mydropdown dropdown-menu">
